# cuda-zig-matmul

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
bazel/: BUILD.bazel
src/: main.zig  matmul_kernel.zig  matmul_kernel_f16.zig
toolchains/: BUILD.bazel
tools/: BUILD.bazel  clang21_stack.sh  clangxx21_stack.sh  normalize_nvptx_ir.zig  zig_ptx.bzl
zig/toolchain/: BUILD.bazel
