load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_static_library")

zig_static_library(
    name = "matmul_kernel",
    main = "src/matmul_kernel.zig",
    compiler_runtime = "exclude",
    emit_bin = False,
    emit_asm = True,
    zigopts = [
        "-O",
        "ReleaseFast",
        "-mcpu=sm_120",
        "-fno-stack-protector",
        "-fstrip",
    ],
    target_compatible_with = [
        "//platforms/cpu:nvptx64",
    ],
)

zig_static_library(
    name = "matmul_kernel_f16",
    main = "src/matmul_kernel_f16.zig",
    compiler_runtime = "exclude",
    emit_bin = False,
    emit_asm = True,
    zigopts = [
        "-O",
        "ReleaseFast",
        "-mcpu=sm_120",
        "-fno-stack-protector",
        "-fstrip",
    ],
    target_compatible_with = [
        "//platforms/cpu:nvptx64",
    ],
)

filegroup(
    name = "matmul_ptx",
    srcs = [":matmul_kernel"],
    output_group = "asm",
)

filegroup(
    name = "matmul_f16_ptx",
    srcs = [":matmul_kernel_f16"],
    output_group = "asm",
)

platform_transition_filegroup(
    name = "matmul_ptx_cuda",
    srcs = [":matmul_ptx"],
    target_platform = "//platforms:cuda_nvptx64",
)

platform_transition_filegroup(
    name = "matmul_f16_ptx_cuda",
    srcs = [":matmul_f16_ptx"],
    target_platform = "//platforms:cuda_nvptx64",
)

zig_binary(
    name = "cuda_matmul",
    main = "src/main.zig",
    args = [
        "--ptx-bf16=$(location :matmul_ptx_cuda)",
        "--ptx-f16=$(location :matmul_f16_ptx_cuda)",
    ],
    data = [
        ":matmul_f16_ptx_cuda",
        ":matmul_ptx_cuda",
    ],
    zigopts = [
        "-fllvm",
        "-lc",
    ],
    visibility = ["//visibility:public"],
)

zig_binary(
    name = "cuda_matmul_f16",
    main = "src/main.zig",
    args = [
        "--math=f16",
        "--ptx-bf16=$(location :matmul_ptx_cuda)",
        "--ptx-f16=$(location :matmul_f16_ptx_cuda)",
    ],
    data = [
        ":matmul_f16_ptx_cuda",
        ":matmul_ptx_cuda",
    ],
    zigopts = [
        "-fllvm",
        "-lc",
    ],
    visibility = ["//visibility:public"],
)
