load("@rules_zig//zig:defs.bzl", "zig_binary")
load("//tools:zig_ptx.bzl", "zig_ptx")

zig_ptx(
    name = "matmul_kernel",
    out = "matmul_kernel.s",
    src = "src/matmul_kernel.zig",
)

zig_ptx(
    name = "matmul_kernel_f16",
    out = "matmul_kernel_f16.s",
    src = "src/matmul_kernel_f16.zig",
)

filegroup(
    name = "matmul_ptx",
    srcs = [":matmul_kernel"],
)

filegroup(
    name = "matmul_f16_ptx",
    srcs = [":matmul_kernel_f16"],
)

filegroup(
    name = "matmul_ptx_cuda",
    srcs = [":matmul_ptx"],
)

filegroup(
    name = "matmul_f16_ptx_cuda",
    srcs = [":matmul_f16_ptx"],
)

zig_binary(
    name = "cuda_matmul",
    main = "src/main.zig",
    args = [
        "--ptx-bf16=$(location :matmul_ptx_cuda)",
        "--ptx-f16=$(location :matmul_f16_ptx_cuda)",
    ],
    data = [
        ":matmul_f16_ptx_cuda",
        ":matmul_ptx_cuda",
    ],
    zigopts = [
        "-fllvm",
        "-lc",
    ],
    visibility = ["//visibility:public"],
)

zig_binary(
    name = "cuda_matmul_f16",
    main = "src/main.zig",
    args = [
        "--math=f16",
        "--ptx-bf16=$(location :matmul_ptx_cuda)",
        "--ptx-f16=$(location :matmul_f16_ptx_cuda)",
    ],
    data = [
        ":matmul_f16_ptx_cuda",
        ":matmul_ptx_cuda",
    ],
    zigopts = [
        "-fllvm",
        "-lc",
    ],
    visibility = ["//visibility:public"],
)
