module(
    name = "cuda_zig_matmul",
)

bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "llvm", version = "0.7.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_zig", version = "0.12.2")

single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        "//third_party/rules_cc/patches:0.2.17/0001-allow-rules-zig-cc-common-link.patch",
        "//third_party/rules_cc/patches:0.2.17/0002-relax-cc-common-link-private-api-check.patch",
    ],
    version = "0.2.17",
)

archive_override(
    module_name = "rules_zig",
    integrity = "sha256-U49JRma7R+fvEaSs2ZJiTk5L6reflWVfPBZuXsKsL3U=",
    strip_prefix = "rules_zig-6e9d876037ecb01ce4354c9c9e0c93e026e84e37",
    urls = ["https://github.com/zml/rules_zig/archive/6e9d876037ecb01ce4354c9c9e0c93e026e84e37.tar.gz"],
)

llvm_source = use_extension("@llvm//extensions:llvm_source.bzl", "llvm_source")
llvm_source.version(llvm_version = "21.1.8")
use_repo(
    llvm_source,
    "compiler-rt",
    "libcxx",
    "libcxxabi",
    "libunwind",
    "llvm-libc",
    "llvm-raw",
    "llvm_config",
    "llvm_zlib",
    "llvm_zstd",
    "openmp",
)

zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//bazel:zig_index.json")
zig.toolchain(
    default = True,
    zig_version = "0.16.0-dev.3153+d6f43caad",
)
use_repo(zig, "zig_toolchains")
use_repo(zig, "zig_0.16.0-dev.3153_Pd6f43caad_x86_64-linux")

register_toolchains("@llvm//toolchain:all")

register_toolchains("@rules_zig//zig/target:all")

register_toolchains("@zig_toolchains//:all")

register_toolchains("//toolchains:cuda_nvptx64_target_toolchain")
